--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 certifi==2016.8.2
 cffi==1.7.0
+cookies==2.2.1
 cryptography==1.4
 enum34==1.1.6
+funcsigs==1.0.2
 idna==2.1
 ipaddress==1.0.16
+mock==2.0.0
 ndg-httpsclient==0.4.2
+pbr==1.10.0
 pyasn1==0.1.9
 pycparser==2.14
 pyOpenSSL==16.0.0
-requests==2.10.0
+requests==2.11.0
+responses==0.5.1
 six==1.10.0
 urllib3==1.16
