--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: python
 python:
   - "2.6"
   - "2.7"
-install: "pip install -r requirements.txt"
+install:
+- pip install -r requirements.txt
+- pip install responses
+
 script: python setup.py test
