--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: python
+
 python:
   - "2.6"
   - "2.7"
-install:
-- pip install -r requirements.txt
-- pip install responses
 
-script: python setup.py test
+install:
+  - pip install -r requirements.txt
+  - pip install responses
+  - pip install python-coveralls
+
+script:
+  - python setup.py test
+
+after_success:
+  - coveralls coveralls.io
